# CFDSolver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
benchmarks/: lid_driven_cavity.cpp
benchmarks/reference/: ghia_table1_u_vertical_centerline.csv  ghia_table1_v_horizontal_centerline.csv
include/core/: boundary_conditions.hpp  grid.hpp  pressure_field.hpp  simulator.hpp  velocity_field.hpp
include/linalg/: conjugate_gradient.hpp  conjugate_gradient_profiled.hpp  gaussian_elimination.hpp  linear_operator.hpp  matrix.hpp  poisson_operator.hpp  profiled_conjugate_gradient.hpp  vector.hpp
include/linalg/profile/: profiled_conjugate_gradient.hpp
include/setups/: airfoil_flow.hpp  base.hpp  ldc.hpp  pdc.hpp
include/setups/airfoils/: airfoil.hpp
profiling/: profile_cg.cpp  profile_cgm.cpp
python/: airfoil_flow.py  lid_driven_cavity.py  visualizer.py
python/airfoil_generator/: naca_airfoil.py
python/gui/: arrow_renderer.py  control_panel.py  field_renderer.py  main.py  main_window.py  setup_schema.py  simulation_controller.py  ui_styles.py
python/setups/: airfoil_flow.py  lid_driven_cavity.py  pressure_driven_channel.py
src/core/: boundary_conditions.cpp  grid.cpp  pressure_field.cpp  simulator.cpp  simulator_pofiled.cpp  velocity_field.cpp
src/linalg/: conjugate_gradient.cpp  conjugate_gradient_profiled.cpp  gaussian_elimination.cpp  linear_operator.cpp  matrix.cpp  poisson_operator.cpp  profiled_conjugate_gradient.cpp  vector.cpp
src/linalg/profile/: profiled_conjugate_gradient.cpp
src/python/: bindings.cpp
src/setups/: airfoil_flow.cpp  base.cpp  ldc.cpp  pdc.cpp
src/setups/airfoils/: airfoil.cpp
tests/integration_tests/: test_dynamics.cpp  test_invariants.cpp
tests/unit_tests/: test_boundary_conditions.cpp  test_cjm.cpp  test_gaussian_elimination.cpp  test_grid.cpp  test_pressure_field.cpp  test_velocity_field.cpp
